# cereal_fwd

./: .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt
benchmark/common/: CMakeLists.txt  benchmark_config.hpp  integer_class.cpp  integer_class.hpp  utils.cpp  utils.hpp
benchmark/integer_class/: CMakeLists.txt  IntegerClass.proto  benchmark_integer_class.cpp  benchmark_integer_class.hpp  benchmark_integer_class_protobuf.hpp  benchmark_integer_class_size.cpp
benchmark/map/: CMakeLists.txt  Map.proto  benchmark_map .cpp  benchmark_map.hpp  benchmark_map_size.cpp
benchmark/polymorphic/: CMakeLists.txt  benchmark_polymorphic.cpp  benchmark_polymorphic.hpp  benchmark_polymorphic_size.cpp
benchmark/scripts/: run.py
benchmark/shared_ptr/: CMakeLists.txt  benchmark_shared_ptr.cpp  benchmark_shared_ptr.hpp  benchmark_shared_ptr_size.cpp
benchmark/unique_ptr/: CMakeLists.txt  benchmark_unique_ptr.cpp  benchmark_unique_ptr.hpp  benchmark_unique_ptr_size.cpp
benchmark/vector/: CMakeLists.txt  Vector.proto  benchmark_vector.cpp  benchmark_vector.hpp  benchmark_vector_size.cpp
doc/: DoxygenLayout.xml  doxygen.in  mainpage.dox
doc/article/: SConstruct  breiter_cereal.tex
doc/article/bib/: references.bib
doxygen/: access_8hpp.html  access_8hpp_source.html  adapters_8hpp.html  adapters_8hpp_source.html  annotated.html  array_8hpp.html  array_8hpp_source.html  base__class_8hpp.html  base__class_8hpp_source.html  binary_8hpp.html  binary_8hpp_source.html  bitset_8hpp.html  bitset_8hpp_source.html  boost__variant_8hpp.html  boost__variant_8hpp_source.html  cereal_8hpp.html  cereal_8hpp_source.html  chrono_8hpp.html  chrono_8hpp_source.html  classcereal_1_1BinaryInputArchive-members.html  classcereal_1_1BinaryInputArchive.html  classcereal_1_1BinaryOutputArchive-members.html  classcereal_1_1BinaryOutputArchive.html  classcereal_1_1ExtendableBinaryInputArchive-members.html  classcereal_1_1ExtendableBinaryInputArchive.html  classcereal_1_1ExtendableBinaryInputArchive_1_1Options-members.html  classcereal_1_1ExtendableBinaryInputArchive_1_1Options.html  classcereal_1_1ExtendableBinaryOutputArchive-members.html  classcereal_1_1ExtendableBinaryOutputArchive.html  classcereal_1_1ExtendableBinaryOutputArchive_1_1Options-members.html  classcereal_1_1ExtendableBinaryOutputArchive_1_1Options.html  classcereal_1_1InputArchive-members.html  classcereal_1_1InputArchive.html  classcereal_1_1JSONInputArchive-members.html  classcereal_1_1JSONInputArchive.html  classcereal_1_1JSONOutputArchive-members.html  classcereal_1_1JSONOutputArchive.html  classcereal_1_1JSONOutputArchive_1_1Options-members.html  classcereal_1_1JSONOutputArchive_1_1Options.html  classcereal_1_1NameValuePair-members.html  (+363 more)
doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_11.js  classes_12.js  classes_4.js  classes_7.js  classes_9.js  classes_a.js  classes_c.js  classes_d.js  classes_f.js  enums_0.js  enums_1.js  enums_2.js  enums_4.js  files_4.js  functions_1.js  functions_10.js  functions_12.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  (+8 more)
include/cereal/: cereal.hpp
include/cereal/archives/: binary.hpp  extendable_binary.hpp  json.hpp  portable_binary.hpp  xml.hpp
include/cereal/details/: extendable_binary_details.hpp  helpers.hpp  polymorphic_impl.hpp  traits.hpp
include/cereal/types/: common.hpp  memory.hpp  polymorphic.hpp
scripts/: updatecoverage.sh
unittests/: CMakeLists.txt  array.cpp  basic_string.cpp  bitset.cpp  boost_variant.cpp  chrono.cpp  common.hpp  complex.cpp  deque.cpp  extendable_binary_archive.cpp  forward_list.cpp  forward_version_read.cpp  list.cpp  load_construct.cpp  map.cpp  memory.cpp  memory_cycles.cpp  multimap.cpp  multiset.cpp  omit_pointers.cpp  pair.cpp  pod.cpp  polymorphic.cpp  portability_golden.cpp  priority_queue.cpp  queue.cpp  set.cpp  stack.cpp  structs_minimal.cpp  structs_specialized.cpp  tuple.cpp  unknown_polymorphic_pointer.cpp  unordered_map.cpp  unordered_multimap.cpp  unordered_multiset.cpp  unordered_set.cpp  valarray.cpp  vector.cpp  versioning.cpp  versioning_backward.cpp  (+4 more)
unittests/testdata/: mips32_ab_hb.extendable  mips32_al_hb.extendable
